added screenshots of swift_cafe

--- a/.github/projects.json
+++ b/.github/projects.json
@@ -9,7 +9,7 @@
   "https://raw.githubusercontent.com/amankrmj01/amankrmj01/main/.github/projects/swift_cafe/Screenshot_Home_screen.png"
 ],
   "largeDescription": "This repository, SwiftCafe, is dedicated to exploring the Swift programming language. It contains a variety of sample code, practical exercises, and demonstrations covering topics relevant to Swift development. The project aims to help learners and developers understand Swift syntax, core programming concepts, and best practices for building apps or scripts using Swift.",
-  "type": "repository"
+  "type": "mobile"
 },
 {
   "name": "GreenHive",
