--- a/.github/projects.json
+++ b/.github/projects.json
@@ -17,7 +17,7 @@
   "url": "https://github.com/GreenHive-Smart-Greenhouse-System/greenhive",
   "images": [],
   "largeDescription": "GreenHive is an advanced smart greenhouse system designed to automate and optimize greenhouse operations. The repository is primarily written in Dart, making up 97.5% of the codebase, with additional support from TypeScript (1.6%) and other languages (0.9%). The project aims to deliver intelligent monitoring, control systems, and user interfaces for greenhouse environments, supporting features like sensor integration, automation, and real-time data analytics.",
-  "type": "repository"
+  "type": "web"
 },
 {
     "name": "restaurant_managemant_frontend",
@@ -25,7 +25,7 @@
     "url": "https://github.com/amankrmj01/restaurant_managemant_frontend",
     "images": [],
     "largeDescription": "This repository contains the front-end code for a restaurant management system, developed mainly in Dart (99.1%) with some HTML (0.9%). It provides user interfaces and client-side logic to support restaurant operations, such as order processing, menu management, and customer interaction.",
-    "type": "repository"
+    "type": "web"
   },
   {
     "name": "restaurant_management_backend",
@@ -33,6 +33,6 @@
     "url": "https://github.com/amankrmj01/restaurant_management_backend",
     "images": [],
     "largeDescription": "This repository features the backend services for the restaurant management system, written entirely in Java (100%). It implements RESTful APIs, database management, and business logic required to run core restaurant operations, supporting the corresponding frontend and ensuring secure, efficient data handling.",
-    "type": "repository"
+    "type": "web"
   }
 ]
